# incubator-retired-quickstep

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CREDITS.md  CREDITS.txt  DEV_README.md  DISCLAIMER  Doxyfile  GENERATOR_FUNCTIONS.md  HISTORY.md  KEYS  LICENSE  NOTICE  README-WINDOW_AGGREGATION.md  README.md  RETIRED.md  WORKING_WITH_AN_IDE.md  _config.yml  about.md  autofix_cmakelists.py  cyclic_dependency.py  empty_src.cpp  index.md  lint_everything.py  validate_cmakelists.py
catalog/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  Catalog.proto  CatalogAttribute.cpp  CatalogAttribute.hpp  CatalogConfig.h.in  CatalogDatabase.cpp  CatalogDatabase.hpp  CatalogDatabaseCache.cpp  CatalogDatabaseCache.hpp  CatalogDatabaseLite.hpp  CatalogErrors.hpp  CatalogModule.hpp  CatalogRelation.cpp  CatalogRelation.hpp  CatalogRelationConstraints.cpp  CatalogRelationConstraints.hpp  CatalogRelationSchema.cpp  CatalogRelationSchema.hpp  CatalogRelationStatistics.cpp  CatalogRelationStatistics.hpp  CatalogTypedefs.hpp  GenerateInitialDefaultCatalog.cpp  IndexScheme.cpp  IndexScheme.hpp  NUMAPlacementScheme.cpp  NUMAPlacementScheme.hpp  PartitionScheme.cpp  PartitionScheme.hpp  PartitionSchemeHeader.cpp  PartitionSchemeHeader.hpp
cli/: CMakeLists.txt  CliConfig.h.in  CliModule.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandExecutorUtil.cpp  CommandExecutorUtil.hpp  ConductorDistributed.cpp  Constants.hpp  DefaultsConfigurator.cpp  DefaultsConfigurator.hpp  DropRelation.cpp  DropRelation.hpp  Flags.cpp  Flags.hpp  IOInterface.hpp  InputParserUtil.cpp  InputParserUtil.hpp  LineReader.cpp  LineReader.hpp  LineReaderBuffered.cpp  LineReaderBuffered.hpp  LineReaderDumb.cpp  LineReaderDumb.hpp  LineReaderLineNoise.cpp  LineReaderLineNoise.hpp  LocalIO.hpp  NetworkCli.proto  NetworkCliClient.hpp  NetworkCliClientMain.cpp  NetworkIO.cpp  NetworkIO.hpp  PrintToScreen.cpp  PrintToScreen.hpp  QuickstepCli.cpp  QuickstepCliDistributed.cpp  QuickstepClient.cpp  SingleNodeClient.cpp  SingleNodeClient.hpp  SingleNodeClientExecutable.cpp  (+6 more)
compression/: CMakeLists.txt  CompressionDictionary.cpp  CompressionDictionary.hpp  CompressionDictionaryBuilder.cpp  CompressionDictionaryBuilder.hpp  CompressionDictionaryLite.cpp  CompressionDictionaryLite.hpp  CompressionModule.hpp
expressions/: CMakeLists.txt  Expression.hpp  ExpressionFactories.cpp  ExpressionFactories.hpp  Expressions.proto  ExpressionsModule.hpp
parser/: CMakeLists.txt  ParseAssignment.hpp  ParseAttributeDefinition.cpp  ParseAttributeDefinition.hpp  ParseBasicExpressions.cpp  ParseBasicExpressions.hpp  ParseBlockProperties.cpp  ParseBlockProperties.hpp  ParseCaseExpressions.cpp  ParseCaseExpressions.hpp  ParseCommand.cpp  ParseCommand.hpp  ParseDataType-decl.hpp  ParseDataType.cpp  ParseDataType.hpp  ParseExpression.hpp  ParseGeneratorTableReference.cpp  ParseGeneratorTableReference.hpp  ParseGroupBy.cpp  ParseGroupBy.hpp  ParseHaving.cpp  ParseHaving.hpp  ParseIndexProperties.cpp  ParseIndexProperties.hpp  ParseJoinedTableReference.cpp  ParseJoinedTableReference.hpp  ParseKeyValue.hpp  ParseLimit.cpp  ParseLimit.hpp  ParseLiteralValue.cpp  ParseLiteralValue.hpp  ParseOrderBy.cpp  ParseOrderBy.hpp  ParsePartitionClause.hpp  ParsePredicate.cpp  ParsePredicate.hpp  ParsePredicateExists.hpp  ParsePredicateInTableQuery.hpp  ParsePriority.hpp  ParseSample.cpp  (+28 more)
query_execution/: AdmitRequestMessage.hpp  BlockLocator.cpp  BlockLocator.hpp  BlockLocatorUtil.cpp  BlockLocatorUtil.hpp  CMakeLists.txt  DAGAnalyzer.cpp  DAGAnalyzer.hpp  ExecutionDeserializer.cpp  ExecutionDeserializer.hpp  ExecutionStats.hpp  Foreman.cpp  Foreman.hpp  ForemanBase.hpp  ForemanDistributed.cpp  ForemanDistributed.hpp  ForemanLite.hpp  ForemanMessage.hpp  ForemanSingleNode.cpp  ForemanSingleNode.hpp  Learner.cpp  Learner.hpp  Pipeline.hpp  PolicyEnforcer.cpp  PolicyEnforcer.hpp  PolicyEnforcerBase.cpp  PolicyEnforcerBase.hpp  PolicyEnforcerDistributed.cpp  PolicyEnforcerDistributed.hpp  PolicyEnforcerSingleNode.cpp  PolicyEnforcerSingleNode.hpp  PriorityPolicyEnforcer.cpp  PriorityPolicyEnforcer.hpp  ProbabilityStore.hpp  QueryContext.cpp  QueryContext.hpp  QueryContext.proto  QueryExecutionMessages.proto  QueryExecutionModule.hpp  QueryExecutionState.hpp  (+25 more)
query_optimizer/: CMakeLists.txt  ExecutionGenerator.cpp  ExecutionGenerator.hpp  ExecutionHeuristics.cpp  ExecutionHeuristics.hpp  ExecutionSerializer.cpp  ExecutionSerializer.hpp  LIPFilterGenerator.cpp  LIPFilterGenerator.hpp  LogicalGenerator.cpp  LogicalGenerator.hpp  LogicalToPhysicalMapper.hpp  Optimizer.cpp  Optimizer.hpp  OptimizerContext.cpp  OptimizerContext.hpp  OptimizerTree.hpp  PhysicalGenerator.cpp  PhysicalGenerator.hpp  QueryHandle.cpp  QueryHandle.hpp  QueryOptimizerConfig.h.in  QueryOptimizerModule.hpp  QueryPlan.hpp  QueryPlan.proto  QueryProcessor.cpp  QueryProcessor.hpp  Validator.hpp
relational_operators/: AggregationOperator.cpp  AggregationOperator.hpp  BuildAggregationExistenceMapOperator.cpp  BuildAggregationExistenceMapOperator.hpp  BuildGeneralizedHashOperator.cpp  BuildGeneralizedHashOperator.hpp  BuildHashOperator.cpp  BuildHashOperator.hpp  BuildLIPFilterOperator.cpp  BuildLIPFilterOperator.hpp  BuildTransitiveClosureOperator.cpp  BuildTransitiveClosureOperator.hpp  CMakeLists.txt  CreateIndexOperator.cpp  CreateIndexOperator.hpp  CreateTableOperator.cpp  CreateTableOperator.hpp  DeleteOperator.cpp  DeleteOperator.hpp  DestroyAggregationStateOperator.cpp  DestroyAggregationStateOperator.hpp  DestroyGeneralizedHashOperator.cpp  DestroyGeneralizedHashOperator.hpp  DestroyHashOperator.cpp  DestroyHashOperator.hpp  DropTableOperator.cpp  DropTableOperator.hpp  FinalizeAggregationOperator.cpp  FinalizeAggregationOperator.hpp  GeneralizedHashJoinOperator.cpp  GeneralizedHashJoinOperator.hpp  GenerateNumRowsStatsOperator.cpp  GenerateNumRowsStatsOperator.hpp  HashJoinOperator.cpp  HashJoinOperator.hpp  InitializeAggregationOperator.cpp  InitializeAggregationOperator.hpp  InitializeTransitiveClosureOperator.cpp  InitializeTransitiveClosureOperator.hpp  InsertOperator.cpp  (+44 more)
(+1072 files in other folders)
